syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

// --- Register ---
message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  string id = 1;
  string email = 2;
  int32 status = 3;
  string error = 4;
}

// --- Login ---
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int32 status = 2;
  string error = 3;
  string userId = 4;
}

// --- Validate Token ---
message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  string userId = 2;
  bool valid = 3;
}